more spacing issues fixed

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -266,7 +266,7 @@ button.material-symbols-outlined{
 }
 
 .form{
-	padding:20px;
+	margin: 0px 20px 0px;
 	font-size:0.75rem;
 }
 
@@ -287,7 +287,7 @@ button.material-symbols-outlined{
 }
 
 #contactform button{
-	margin-top:12px;
+	margin: 15px 0px 10px;
 	background-color: #222;
 	color:#c78c06;
 	padding:4px;
